# auto-movie-edit

./: README.md  pyproject.toml  scaffold.ymmp  ①テンプレ登録.py  ②動画用シート作成.py  ③YMMP書き出し.py  ⓪テンプレ作成.py  ⓪テンプレ更新.py
Template/: template.xlsx
Template/templates/assets/: tachie_新しいキャラクター_default.json
Template/templates/telops/: telop_ゴージャス.json  telop_シュール.json  telop_セクシー.json  telop_ツッコミ.json  telop_ノーマル.json  telop_強調.json  telop_落ち込み.json
src/auto_movie_edit/: __init__.py  cli.py  history.py  language.py  models.py  proposals.py  srt.py  utils.py  workbook.py  ymmp.py
tests/: test_hiragana_shrink.py  test_language_cache.py  test_pack_timing.py  test_tachie_cache.py
tests/data/: hiragana_shrink_sample.ymmp
