[project]
name = "auto-movie-edit"
version = "0.1.0"
description = "Tools for generating YMM4-compatible projects from spreadsheet timelines."
authors = [{name = "Auto Generated", email = "auto@example.com"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1.2",
    "typer>=0.9.0",
]

[project.scripts]
auto-movie-edit = "auto_movie_edit.cli:app"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
